Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -397,7 +397,7 @@
       "metadata": {
         "id": "icDWtYTjBO0n"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -425,33 +425,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "str.upper(texto)"
-      ],
+      "source": [],
       "metadata": {
-        "id": "wMVshJrY_ZXh",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 36
-        },
-        "outputId": "9c0bb87a-49e4-4599-8248-16b39212148c"
+        "id": "wMVshJrY_ZXh"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'  MICAELA DE LOS SANYOS '"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 3
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -465,33 +444,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "str.lower(texto)"
-      ],
+      "source": [],
       "metadata": {
-        "id": "px3yEeNH_YK4",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 36
-        },
-        "outputId": "69c61365-ca6c-4b3b-e95d-1d9510dd4962"
+        "id": "px3yEeNH_YK4"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'  micaela de los sanyos '"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -505,33 +463,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "str.strip(texto)"
-      ],
+      "source": [],
       "metadata": {
-        "id": "76dLgNa4_XAe",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 36
-        },
-        "outputId": "fbc6bffc-ecae-4314-da46-428e10561d74"
+        "id": "76dLgNa4_XAe"
       },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'Micaela de los Sanyos'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 5
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -546,33 +483,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "texto.replace('y','t')"
-      ],
+      "source": [],
       "metadata": {
-        "id": "PNXAixtE_V6R",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 36
-        },
-        "outputId": "7faaf34e-2abc-43bd-a07c-5ba903af515e"
+        "id": "PNXAixtE_V6R"
       },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'  Micaela de los Santos '"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 7
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -607,28 +523,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "texto=texto.strip().replace('y','t').upper()\n",
-        "\n",
-        "print(texto)"
-      ],
+      "source": [],
       "metadata": {
-        "id": "ocPP-Jaj_SJI",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "71cb64d1-c014-46a4-d2e8-5714b3d06587"
+        "id": "ocPP-Jaj_SJI"
       },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "MICAELA DE LOS SANTOS\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -654,26 +554,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "nombre=input('Escriba su nombre: ');"
-      ],
+      "source": [],
       "metadata": {
-        "id": "zbH_9i3q_PdY",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "09afa4bd-915d-4600-f827-5cb0faacc957"
+        "id": "zbH_9i3q_PdY"
       },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Escriba su nombre: Sergio\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -711,49 +597,21 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "anioAdmision=input('Digita el año de admisión: ')"
-      ],
+      "source": [],
       "metadata": {
-        "id": "M2ueeH6l_NMe",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "fb77bb9d-8cdb-4b4d-a832-6fe14c9e872b"
+        "id": "M2ueeH6l_NMe"
       },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Digita el año de admisión: 2021\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "anioSalida=input('Digita el año de egreso: ')"
-      ],
+      "source": [],
       "metadata": {
-        "id": "xfWwuViK_NUn",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "fd6ad75f-ec3f-419f-ad4f-380b3d415444"
+        "id": "xfWwuViK_NUn"
       },
-      "execution_count": 15,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Digita el año de egreso: 2027\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -795,7 +653,14 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Aprobación entre 7 y 10\n",
+        "#Reprobación menor a 7\n",
+        "\"\"\"\n",
+        "Si la nota es mayor o igual a 7, el estudiante es aprobado.\n",
+        "Si la nota es menor a 7, el estudiante es reprobado.\n",
+        "\"\"\""
+      ],
       "metadata": {
         "id": "pa4gLncu-mvU"
       },
@@ -841,12 +706,28 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "if 2 < 7:\n",
+        "  print('2 es menor a 7')\n",
+        ""
+      ],
       "metadata": {
-        "id": "S2S6XAFz-czM"
+        "id": "S2S6XAFz-czM",
+        "outputId": "702dcdb0-5c7c-461f-cb49-66ffc7bf2ada",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 es menor a 7\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -877,12 +758,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "if 2 > 7:\n",
+        "  print('2 es mayor a 7')\n",
+        "else:\n",
+        "  print('2 no es mayor a 7')"
+      ],
       "metadata": {
-        "id": "ZTfNJd_f-aOq"
+        "id": "ZTfNJd_f-aOq",
+        "outputId": "6f1c0946-3f68-4617-9fb5-c6970da6c0fe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 no es mayor a 7\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -907,12 +805,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nota = float(input('Ingrese el promedio de la nota: '))\n",
+        "if nota >= 7:\n",
+        "  print('Aprobado')\n",
+        "else:\n",
+        "  print('Reprobado')"
+      ],
       "metadata": {
-        "id": "UukCN4AQ-YYW"
+        "id": "UukCN4AQ-YYW",
+        "outputId": "89f2a5e8-0c6b-4f13-d1a3-f9de52d4ad1c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese el promedio de la nota: 7.0\n",
+            "Aprobado\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -936,12 +853,34 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "if nota >= 7:\n",
+        "  print('Aprobado')\n",
+        "  print('Felicidades')\n",
+        "else:\n",
+        "  if nota >= 5:\n",
+        "    print('Recuperación')\n",
+        "  else:\n",
+        "    print('Reprobado')"
+      ],
       "metadata": {
-        "id": "G9cJ5O9--W52"
+        "id": "G9cJ5O9--W52",
+        "outputId": "12e3b6cc-1352-4439-b173-47c61dec9724",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Aprobado\n",
+            "Felicidades\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1025,7 +964,17 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nota = float(input('Ingrese el promedio de la nota: '))\n",
+        "\n",
+        "if nota >= 7:\n",
+        "  print('Aprobado')\n",
+        "  print('Felicidades')\n",
+        "elif nota >= 5:\n",
+        "  print('Recuperación')\n",
+        "else:\n",
+        "  print('Reprobado')"
+      ],
       "metadata": {
         "id": "QFamB78s-TW_"
       },
