--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -713,10 +713,10 @@
       ],
       "metadata": {
         "id": "S2S6XAFz-czM",
-        "outputId": "702dcdb0-5c7c-461f-cb49-66ffc7bf2ada",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "702dcdb0-5c7c-461f-cb49-66ffc7bf2ada"
       },
       "execution_count": 1,
       "outputs": [
@@ -766,10 +766,10 @@
       ],
       "metadata": {
         "id": "ZTfNJd_f-aOq",
-        "outputId": "6f1c0946-3f68-4617-9fb5-c6970da6c0fe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6f1c0946-3f68-4617-9fb5-c6970da6c0fe"
       },
       "execution_count": 2,
       "outputs": [
@@ -814,10 +814,10 @@
       ],
       "metadata": {
         "id": "UukCN4AQ-YYW",
-        "outputId": "89f2a5e8-0c6b-4f13-d1a3-f9de52d4ad1c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "89f2a5e8-0c6b-4f13-d1a3-f9de52d4ad1c"
       },
       "execution_count": 5,
       "outputs": [
@@ -865,10 +865,10 @@
       ],
       "metadata": {
         "id": "G9cJ5O9--W52",
-        "outputId": "12e3b6cc-1352-4439-b173-47c61dec9724",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "12e3b6cc-1352-4439-b173-47c61dec9724"
       },
       "execution_count": 6,
       "outputs": [
@@ -1167,12 +1167,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nota_1 = float(input('Ingrese la primera nota: '))\n",
+        "nota_2 = float(input('Ingrese la segunda nota: '))\n",
+        "print(f'El promedio de las notas es: {(nota_1 + nota_2) / 2}')\n",
+        "#\n"
+      ],
       "metadata": {
-        "id": "xcx21IGT9qA0"
+        "id": "xcx21IGT9qA0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f5c9aba2-05eb-45ea-dc8b-bc0bd5cf09ab"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese la primera nota: 5\n",
+            "Ingrese la segunda nota: 8\n",
+            "El promedio de las notas es: 6.5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1232,12 +1251,38 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "contador = 1\n",
+        "while contador <= 10:\n",
+        "  print(contador)\n",
+        "  contador += 1"
+      ],
       "metadata": {
-        "id": "Hd0ZSWxD9wCD"
+        "id": "Hd0ZSWxD9wCD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5bf25734-fdd3-4627-ab09-bf784068417e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1259,21 +1304,39 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "contador =1\n",
+        "while contador <= 3:\n",
+        "  nota_1 = float(input('Ingrese la primera nota: '))\n",
+        "  nota_2 = float(input('Ingrese la segunda nota: '))\n",
+        "  print(f'El promedio de las notas es: {(nota_1 + nota_2) / 2}')\n",
+        "  contador += 1"
+      ],
       "metadata": {
-        "id": "9T5eCLFx9wk6"
+        "id": "9T5eCLFx9wk6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "66e4e3c0-af25-4bb9-d8a9-0a7021953309"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "P6E0_dW-9lZ9"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese la primera nota: 8.5\n",
+            "Ingrese la segunda nota: 5\n",
+            "El promedio de las notas es: 6.75\n",
+            "Ingrese la primera nota: 6.5\n",
+            "Ingrese la segunda nota: 10\n",
+            "El promedio de las notas es: 8.25\n",
+            "Ingrese la primera nota: 6\n",
+            "Ingrese la segunda nota: 10\n",
+            "El promedio de las notas es: 8.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1331,21 +1394,70 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for n in range(1,11):\n",
+        "  print (n)"
+      ],
       "metadata": {
-        "id": "KkL1wUIj9jL4"
+        "id": "KkL1wUIj9jL4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "193f05bf-1aa3-414d-e41d-5e2a5e1239f9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for e in range(1,4):\n",
+        "  nota_1 = float(input('Ingrese la primera nota: '))\n",
+        "  nota_2 = float(input('Ingrese la segunda nota: '))\n",
+        "  print(f'El promedio de las notas es: {(nota_1 + nota_2) / 2}')"
+      ],
       "metadata": {
-        "id": "uXIZnLSr9jOu"
+        "id": "uXIZnLSr9jOu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e885ef3a-e555-4da6-fa97-166a76a2f6d7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese la primera nota: 51\n",
+            "Ingrese la segunda nota: 2\n",
+            "El promedio de las notas es: 26.5\n",
+            "Ingrese la primera nota: 0\n",
+            "Ingrese la segunda nota: 0\n",
+            "El promedio de las notas es: 0.0\n",
+            "Ingrese la primera nota: 6\n",
+            "Ingrese la segunda nota: 8.9\n",
+            "El promedio de las notas es: 7.45\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
